ex6/testdata/typechecker/error/MDeclTest-err2.java
class MDeclTest {
	public static void main(String[] a){
    }
}

class A {
    A m(boolean x)
    {    
        int x;  // TE
        return new A();
    }

}


